fix: display colour picker fully and prevent overlapping
(cherry picked from commit 47e589158e9e2abce9e240da5c92f15a0010c527)

--- a/gravitee-apim-console-webui/src/portal/theme/portal-theme.component.scss
+++ b/gravitee-apim-console-webui/src/portal/theme/portal-theme.component.scss
@@ -46,6 +46,7 @@
 
         mat-expansion-panel {
           @include mat.elevation(0);
+          overflow: visible;
         }
 
         &__panel {
@@ -70,6 +71,8 @@
           &__editor {
             display: flex;
             flex-direction: column;
+            z-index: 1;
+            position: relative;
           }
         }
       }
